# HoudiniElf

./: .copilot_prefs.audit.jsonl  .env  .gitignore  AGENTS.md  pyproject.toml  requirements.txt  requirements_python-version.txt  scrape_dog.py  setup.py  vla_prompts.md
.clinerules/: HoudiniGeneral.md  HoudiniPython.md  HoudiniVex.md
.github/: copilot-instructions.md  copilot-instructions.md.OFF  python.instructions.md  shadergraph.instructions.md.OFF  vex.instructions.md  vex_knowledge.instructions.md
O-Toole/: test_qt_direct.py  wake_mac.sh
ScrapeDog/: merge_pyqgis.py  scrape_dog.py  scrape_dog_qt6.py  scrape_settings.ini  test_runner.py
pi-vscode-extension/: HANDOFF.md  current-browser-console.txt  irrelevant.txt  label-debug-errors.txt  poi-probe-console-2.txt
scrape_dog/: README.md  __init__.py  __main__.py  cli.py  gui.py  gui_tk.py  merge_pyqgis.py  models.py  runner.py  scrape_core.py  scrape_dog.md  scrape_settings.ini  settings.py
tests/: test_models.py  test_scraper.py  test_settings.py
tools_Didka/: tsv_to_csv.py
tools_Houdini/: external_files.py  (+3 more)
tools_Houdini.egg-info/: PKG-INFO  SOURCES.txt
tools_QGIS/dbQueryMCPLayer/: README.md  config.example.json  dbQueryTools_requirement.md  mcp.json.example  pyproject.toml
tools_QGIS/dbQueryMCPLayer/src/db_query_mcp/: __init__.py  config.py  guards.py  keychain.py  server.py
tools_QGIS/dbQueryMCPLayer/src/db_query_mcp/adapters/: base.py  databricks_adapter.py  postgres_adapter.py
tools_QGIS/dbQueryMCPLayer/src/db_query_mcp_layer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+366 files in other folders)
